Added plots for MPC vs LQR vs PID

--- a/control/control.tex
+++ b/control/control.tex
@@ -50,7 +50,21 @@
         It was firstly shown in Chapter~\ref{chap:system_id} that the system identifcation techniques worked in simulation.
         % Emphasise that control is now applied in a full \gls{SITL} simulation.
         
-        \FloatBarrier\subsection{Single paylaod}
+        \FloatBarrier\subsection{Simple suspended payload}
+
+            \paragraph
+            intro
+
+            \input{control/plots/compare_control_vel.tex}
+
+            \paragraph
+            vel control
+
+            \input{control/plots/compare_control_theta.tex}
+
+            \paragraph
+            theta control
+
 
             \begin{itemize}
                 \item subplot prediction of data driven model. subplot prediction of white-box model
