Added acc_sp plot

--- a/control/control.tex
+++ b/control/control.tex
@@ -38,7 +38,7 @@
 
         MATLAB
         QP solver
-        C+ generation
+        C++ generation
 
     \FloatBarrier\section{Implentation and results}
 
@@ -112,6 +112,8 @@
                 \item plot different system paramaters
                 \item plot with wind disturbacne control
             \end{itemize}
+
+            % Could add effect of bad models. ??
 
         \FloatBarrier\subsection{Dynamic payload}
 
