--- a/system_id/dmdc.tex
+++ b/system_id/dmdc.tex
@@ -125,9 +125,9 @@
     \begin{equation}
         \bm{G} \approx \bm{X^\prime} \Tilde{\bm{V}} \Tilde{\bm{\Sigma}}^{-1} \Tilde{\bm{U}} .
     \end{equation}
-    By reversing Equation~\ref{eq:G_Omega}, $\bm{G}$ can now be separated into:
+    By reversing Equation~\ref{eq:G_Omega}, $\bm{G}$ can now be decomposed into:
     \(
-        \bm{G} = \begin{bmatrix} \bm{A} & \bm{A}_d & \bm{B} \end{bmatrix}.
+        \bm{G} = \begin{bmatrix} \bm{A} & \bm{A}_d & \bm{B} \end{bmatrix}
     \)
     according to the required dimensions of each matrix.
     Thereby, the state-space model approximated by \gls{DMDc} is complete.
