--- a/control/plots/improve_lqr_integrator.tex
+++ b/control/plots/improve_lqr_integrator.tex
@@ -30,22 +30,32 @@
         {control/csv/compare_control_mpc_Simulink_single_pend_mp0.3_l2.25_MPC_vel_steps_tune_scale_0.7_wind_step_disturb.csv};
         \addlegendentry{Setpoint}
 
-        \pgfplotsset{cycle list shift = 1} % Shift to skip PID colour used in other plots
+        \pgfplotsset{cycle list shift = 2} % Shift to skip PID colour used in other plots
 
-        \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = time, y = vel, col sep = comma] 
-        {control/csv/compare_control_mpc_Simulink_single_pend_mp0.3_l2.25_MPC_vel_steps_tune_scale_0.7_wind_step_disturb.csv};
-        \addlegendentry{MPC}
+        % \addplot+[mark = none, style = solid, ultra thick] 
+        % table[x = time, y = vel, col sep = comma] 
+        % {control/csv/compare_control_mpc_Simulink_single_pend_mp0.3_l2.25_MPC_vel_steps_tune_scale_0.7_wind_step_disturb.csv};
+        % \addlegendentry{MPC}
 
         \addplot+[mark = none, style = dashed, ultra thick] 
         table[x = time, y = vel, col sep = comma] 
-        {control/csv/compare_control_lqr_Simulink_single_pend_mp0.3_l2.25_LQR_vel_steps_tune_scale_0.7_wind_step_disturb.csv};
-        \addlegendentry{LQR}
+        {control/csv/compare_control_lqr_Simulink_single_pend_mp0.3_l2.25_LQR_vel_steps_tune_scale_0.7_wind_step_disturb_intg_weight_0.1.csv};
+        \addlegendentry{Integrator weighting: 0.1}
+
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = time, y = vel, col sep = comma] 
+        {control/csv/compare_control_lqr_Simulink_single_pend_mp0.3_l2.25_LQR_vel_steps_tune_scale_0.7_wind_step_disturb_intg_weight_1.csv};
+        \addlegendentry{Integrator weighting: 1}
+
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = time, y = vel, col sep = comma] 
+        {control/csv/compare_control_lqr_Simulink_single_pend_mp0.3_l2.25_LQR_vel_steps_tune_scale_0.7_wind_step_disturb_intg_weight_10.csv};
+        \addlegendentry{Integrator weighting: 10}
 
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{Effect of an unmeasured step input disturbance
+    \caption{Different LQR responses for different integrator gains
     ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram}).}
     \label{fig:improve_lqr_integrator}
 \end{figure}
