--- a/control/plots/compare_control_theta.tex
+++ b/control/plots/compare_control_theta.tex
@@ -44,7 +44,7 @@
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{Payload angle comparison for different controllers
+    \caption{Payload angle comparison of different controllers
     ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram})}
     \label{fig:compare_control_theta}
 \end{figure}
