--- a/control/plots/compare_control_vel_dynamic.tex
+++ b/control/plots/compare_control_vel_dynamic.tex
@@ -48,7 +48,7 @@
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{Velocity step response comparison for different controllers
+    \caption{Velocity step response comparison of different controllers
     ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram})}
     \label{fig:compare_control_vel}
 \end{figure}
