--- a/control/plots/compare_control_vel_l-1.0_mp-0.2.tex
+++ b/control/plots/compare_control_vel_l-1.0_mp-0.2.tex
@@ -48,6 +48,6 @@
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{Velocity step response comparison for different controllers
-    ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram})}
+    \caption{Velocity step response comparison of different controllers
+    ($l =$~\SI{1}{\meter}, $m_p =$~\SI{0.2}{\kilo\gram})}
 \end{subfigure}
