--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -21,7 +21,7 @@ This 3D mathematical model will be used in a nonlinear simulation of a multiroto
     \label{sec:linear_model}
 
 \section{Discretised model}
-\FloatBarrier\section{Model verification}
+\FloatBarrier\section{Model verification} \label{sec:model_verification}
 
     \paragraph
     Intro
