--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -184,7 +184,7 @@
         Therefore \gls{MASE} is not a helpful ratio for our use case.
 
         \paragraph
-        \gls{NMAE} (Normalised Mean Absolute Error) is a scale-free error metric which provides a fair comparison for different variables in our use case.
+        \gls{NMAE} (Normalised Mean Absolute Error) is a scale-free error metric which provides a fair comparison of different variables in our use case.
         In this work \gls{NMAE} normalises the MAE of a variable by the range of that variable, 
         thereby variables with different ranges or different means can be compared.
         This value is calculated as:
