--- a/control/plots/compare_control_vel_l-2.0_mp-0.3.tex
+++ b/control/plots/compare_control_vel_l-2.0_mp-0.3.tex
@@ -48,6 +48,6 @@
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{Velocity step response comparison for different controllers
+    \caption{Velocity step response comparison of different controllers
     ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram})}
 \end{subfigure}
