--- a/control/plots/compare_control_acc_sp.tex
+++ b/control/plots/compare_control_acc_sp.tex
@@ -34,7 +34,7 @@
 
         \addplot+[mark = none, style = dashed, ultra thick] 
         table[x = time, y = acc_sp, col sep = comma] 
-        {control/csv/compare_control_lqr_Simulink_single_pend_mp0.3_l2.25_PID_vel_steps_tune_scale_0.7.mat.csv};
+        {control/csv/compare_control_lqr_Simulink_single_pend_mp0.3_l2.25_LQR_vel_steps_tune_scale_0.7.csv};
         \addlegendentry{LQR}
 
 
