--- a/control/plots/compare_control_vel_l-0.5_mp-0.1.tex
+++ b/control/plots/compare_control_vel_l-0.5_mp-0.1.tex
@@ -48,6 +48,7 @@
 
         \end{axis}
     \end{tikzpicture} 
+    \label{fig:compare_control_vel_l05}
     \caption{Velocity step response comparison of different controllers
     ($l =$~\SI{0.5}{\meter}, $m_p =$~\SI{0.1}{\kilo\gram})}
 \end{subfigure}
