--- a/control/plots/compare_control_acc_sp.tex
+++ b/control/plots/compare_control_acc_sp.tex
@@ -7,10 +7,10 @@
             x unit = \si{\second},
             y unit = \si{\metre/\second},
             xmin = 0,   xmax = 16,
-            ymin = -0.1,  ymax = 2.2,
+            ymin = -0.1,  ymax = 2,
             grid = major,
             legend cell align = left,
-            legend pos = south east,
+            legend pos = north east,
             grid style = dashed,
             legend style = {font = \scriptsize},
             label style = {font = \scriptsize},
