--- a/control/plots/improve_lqr_integrator.tex
+++ b/control/plots/improve_lqr_integrator.tex
@@ -55,7 +55,7 @@
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{Different LQR responses for different integrator gains
+    \caption{Different \gls{LQR} responses for different integrator gains
     ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram}).}
     \label{fig:improve_lqr_integrator}
 \end{figure}
