--- a/results/results.tex
+++ b/results/results.tex
@@ -163,7 +163,7 @@
             % Notice how the first two oscillation peaks differ noticeably from the expected linear damping shape.
             % Since the payload is attached below the \gls{CoM} of the multirotor, the oscillating pitch angle of the multirotor also affects the swing angle of the payload.
 
-            % ?? However, as discussed in Chapter~\ref{chap:control}, the LQR controller which utilises the white-box model is quite robust against model uncertainty and may still result in acceptable control with such a model.
+            % ?? However, as discussed in Chapter~\ref{chap:control}, the \gls{LQR} controller which utilises the white-box model is quite robust against model uncertainty and may still result in acceptable control with such a model.
             % Recall from Chapter~\ref{chap:system_id} that the damping coefficient is not estimated, but a manually tuned value is used.
 
             \input{results/plots/cable_length_vs_train_time_wind.tex}
