Added plot with a changed multirotor mass but not very convinv=cing

--- a/control/control.tex
+++ b/control/control.tex
@@ -126,6 +126,8 @@
             Instead, the same controller parameters were used for these simulations as the simulations in Section~\ref{sec:simple_payload_control}.
             This shows that each control architecture is adaptibile to different payload parameters without manual intervention.
 
+            \input{control/plots/compare_control_vel_mq_changed.tex}
+            
         \FloatBarrier\subsection{Wind disturbance}
 
             \paragraph
